css/style.css
/* ... */
.pt_transfr_ern {text-align: center;}
.pt_transfr_ern input {max-width: 180px;margin: auto;text-align: center;font-size: 45px;height: auto;border: 0;font-weight: 500;}

.vp_msg_vid_mnu {display: none;}








/*Responsive*/
@media (min-width: 768px){
.modal-sm {width: 380px;}
}

@media (min-width: 1200px){
.container {width: 1150px;}
.cus_slider .slick-prev, .cus_slider .slick-next, .home-page-categories .row.vp_top_vids .slick-prev, .home-page-categories .row.vp_top_vids .slick-next {transform: none;top: 45px;}
}

@media (max-width: 1430px) {
.container {width: 1056px;}
}

@media (max-width: 1360px) {
.container {width: 850px;}
nav.navbar-findcond .search-header input {width: 440px;}
.articles-content .pt_article_h_list .video-thumb img {min-height: 200px;max-height: 200px;}
.custom_width_import {width: 77%;}
.yp_side_drawer {width: 110px;}
.yp_side_menu.has_side_menu {margin-left: 110px;}
.yp_side_drawer ul.sections {border: 0;padding: 0 5px;}
.yp_side_drawer ul.sections.menu_links li {width: 100%;float: none;}
.yp_side_drawer ul.sections:not(.menu_links), .yp_side_drawer h3 {display: none;}
header.navbar-fixed-top, header.navbar-fixed-top > nav.navbar {left: 110px;}
.home-page-categories .row.vp_top_vids .col-md-3 {width: 33.3333333%;}
}

@media (max-width: 1251px) {
.container {width: 1056px;}
.yp_side_menu.has_side_menu{margin-left: 0px;}
.yp_side_drawer {left: -300px;z-index: 9999;width: calc(100% - 56px);max-width: 280px;top: 0;transition: all 0.2s;box-shadow: 0 8px 10px -5px rgba(0,0,0,.2), 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12);background-color: white;}
body.side_open {overflow-y:hidden;}
body.side_open .yp_side_drawer {left: 0;}
.yp_side_drawer > div {padding: 15px 0;}
.yp_side_drawer ul.sections {border-bottom: 1px solid #ebebeb;}
.yp_side_drawer ul.sections, .yp_side_drawer ul.sections.menu_links {padding: 0}
.yp_side_drawer ul.sections.menu_links li {margin: 0;}
.yp_side_drawer ul.sections.menu_links li, .yp_side_drawer ul.sections.menu_links li a {height: 48px;text-align: inherit;line-height: 48px;border-radius: 0px;}
.yp_side_drawer ul.sections li a {color: #494949;padding: 0 24px;font-weight: 500;height: 40px;line-height: 40px;border-radius: 0px;font-size: 14px;}
.yp_side_drawer ul.sections li a:hover {color: #000;background-color: rgba(0, 0, 0, 0.05);}
.yp_side_drawer ul.sections li.active a {background-color: rgba(19, 80, 243, 0.15);color: #2282f2;}
.yp_side_drawer ul.sections li a svg {margin: -3px 32px 0 0;display: inline-block;}
.yp_side_drawer ul.sections.menu_links li a {padding: 0 24px;}
.yp_side_drawer h3 {padding: 20px 24px 7px;color: darkgrey;}
.yp_side_drawer.hide_side_menu {left: -300px;}
nav.navbar-findcond .search-header input {width: 360px;}
nav.navbar-findcond .yp_slide_menu {display:block;}
.articles-content .pt_article_h_list .video-thumb img {min-height: 220px;max-height: 220px;}
.custom_width_import {width: 66.66666667%;}
header.navbar-fixed-top, header.navbar-fixed-top > nav.navbar {left: 0px;}
.yp_side_drawer ul.sections:not(.menu_links), .yp_side_drawer h3 {display: block;}
.yp_side_drawer .vid_hide_mobii_menu {display: none !important;}
.home-page-categories .row.vp_top_vids .col-md-3 {width: 25%;}
}

@media (max-width: 1210px) { 
.pro-triangle, .free-triangle { display: none; }
.go-pro-container .go-pro-body .go-pro-packages .go-pro-pkg div { max-width: 100%; width: 100%; }
.go-pro-container .go-pro-body .go-pro-packages .go-pro-pkg div h4 { margin: 0 !important; }
.go-pro-container .go-pro-body .go-pro-packages .go-pro-pkg div h4 * { float: unset !important; }
.go-pro-container .go-pro-body .go-pro-packages .go-pro-pkg div h4 span.go-pro-pkg-price { display: block; width: 100%; text-align: center; }
.go-pro-container .go-pro-body .go-pro-packages .go-pro-pkg div .go-pro-pkg-purchase button { padding: 7px 15px !important; } 
.login_aside {min-width: 450px;max-width: 450px;}
}

@media (max-width: 1127px) {
.container {width: 850px;}
nav.navbar-findcond .search-header input {width: 310px;}
.pt_footer a {margin: 0px 2px;}
.articles-content .pt_article_h_list .video-thumb img {min-height: 190px;max-height: 190px;}
.custom_width_import {width: 77%;}
}

@media (max-width: 1090px){
nav.navbar-findcond ul.navbar-nav a span.hide-in-mobile {display:none;}
.hide_mobi_hist {display: none;}
}

@media (max-width: 992px){
nav.navbar-findcond .search-header input{width: 300px;}
.navbar-default.second-header-layout .navbar-nav > li > a {padding: 6px 10px;}
nav.navbar-findcond .search-header input:focus{margin-right:0px;}
.hide-in-mobile { display: none !important; }
.video-latest-list .video-thumb img {min-height: 190px;max-height: 190px;}
#no_padding {padding: 0 !important;}
.video-latest-list .video-thumb a {height: 160px;}
.video-player .icons span {display: none;}
.mobile { display: block; width: 100%; }
.desktop, .icons { display: none; }
.vid_analts_stat {margin-bottom: 15px;}
.create-new-ad-container, .user-ads-list-container {padding-left: 15px;padding-right: 15px;}
.login_aside {min-width: 350px;max-width: 350px;}
.contact-us-form {padding: 30px 20px 5px;}
.yp_side_drawer > div {margin: 0;}
}

@media (max-width: 990px) { 
.no-padding-right { padding-right: 15px !important; }
.no-padding-left { padding-left: 15px !important; }
.video-player-page .no-padding-right, .video-player-page .no-padding-left { padding-left: 5px !important; }
}
/* ... */

